--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
         "**/*.ilk": true,
         "**/*.obj": true,
         "**/*.pdb": true
+    },
+    "files.associations": {
+        "ctype.h": "c"
     }
 }
